--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     
   </head>
   <body>
@@ -78,7 +79,7 @@
     <div class="feature-secton">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 col-10 m-auto">
                     <div class="feature-contant">
                         <img src="img/book_1.png" class="img-fluid" alt="">
                         <h2>1500+ Topic</h2>
@@ -86,7 +87,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 col-10 m-auto">
                     <div class="feature-contant">
                         <img src="img/book_2.png" class="img-fluid" alt="">
                         <h2>1800+ Students</h2>
@@ -94,7 +95,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 col-10 m-auto">
                     <div class="feature-contant">
                         <img src="img/book_3.png" class="img-fluid" alt="">
                         <h2>9K+ Test Token</h2>
@@ -102,7 +103,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 col-10 m-auto">
                     <div class="feature-contant">
                         <img src="img/book-4.png" class="img-fluid" alt="">
                         <h2>2000+ Student</h2>
@@ -121,7 +122,7 @@
                     <h1>Online Courses</h1>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-6 col-lg-4 col-10 m-auto">
                         <div class="course_contant">
                             <img src="img/course-1.png"  class="img-fluid" alt="">
                             <h2>Modern Psychology</h2>
@@ -139,7 +140,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-6 col-lg-4 col-10 m-auto">
                         <div class="course_contant">
                             <img src="img/course_2.png"  class="img-fluid" alt="">
                             <h2>Modern Psychology</h2>
@@ -157,7 +158,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-6 col-lg-4 col-10 m-auto">
                         <div class="course_contant">
                             <img src="img/course_3.png"  class="img-fluid" alt="">
                             <h2>Modern Psychology</h2>
@@ -216,11 +217,11 @@
     <div class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4 col-10 m-auto">
                     <p>Millions of people of all ages and from around
                         the world are improving their lives with us</p>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 m-auto text-center">
                     <div class="row">
                         <div class="col-md-4">
                             <h3>Course</h3>
@@ -232,7 +233,7 @@
                                     <li><a href="">Engineering</a></li>
                                 </ul>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 text-center">
                             <h3>Terms</h3>
                                 <ul>
                                     <li><a href="">Graphic Design</a></li>
@@ -242,7 +243,7 @@
                                     <li><a href="">Engineering</a></li>
                                 </ul>
                         </div>
-                        <div class="col-md-4 ">
+                        <div class="col-md-4 text-center">
                             <h3>Useful</h3>
                                 <ul>
                                     <li><a href="">Graphic Design</a></li>
@@ -257,7 +258,7 @@
                     </div>
                 </div>
                 
-            <div class="row text-center footer-text">
+            <div class="row text-center footer-text text-center">
                 <h3>Copyright © 2020 www.com</h3>
             </div>
         </div>
